# national-park-service-mcp-server

./: Dockerfile  README.md  app.py  deployment-commands.txt  nps-mcp-workbook.ipynb  nps.py  pyproject.toml  requirements.txt  server.py  smithery.yaml  stdio_nps.py
automation/: deployment-commands.txt
notebooks/: guide.md  nps-mcp-workbook.ipynb
notebooks/research/: stdio_nps.py
src/: api_utils.py  models.py  nps.py  server.py
