[project]
name = "nps-info-server"
version = "1.0.0"
description = "National Park Service server helps to access any information available via NPS website with API key authentication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "mcp>=1.0.0",
]